<resources>
    <string name="app_name">Poker Operator</string>

    <string name="title_section1">new Session</string>
    <string name="title_section2">Overview</string>
    <string name="title_section3">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="lbl_Stakes">New Text</string>
    <string name="lbl_date">New Text</string>
    <string name="btn_bankroll">Bankroll</string>
    <string name="btn_games">Games</string>
    <string name="btn_limit">Limittype</string>
    <string name="btn_location">Location</string>
    <string name="btn_stake">Stake</string>
    <string name="btn_currency">Currency</string>
    <string name="btn_add">Add Bankroll</string>
    <string name="txt_date">Start Date</string>
    <string name="txt_place">Place</string>
    <string name="txt_stake">Stake</string>
    <string name="txt_gametype">GameType</string>
    <string name="txt_limit">LimitType</string>
    <string name="txt_type">Limit Type</string>
    <string name="txt_gameType">Game Type</string>
    <string name="txt_stakes">Stakes</string>
    <string name="txt_buyIn">Buy-In</string>
    <string name="txt_bankroll">Bankroll</string>
    <string name="txt_location">Location</string>
    <string name="btn_startTime">Start Time</string>
    <string name="btn_startDate">Start Date</string>
    <string name="btn_endDate">End Date</string>
    <string name="btn_endTime">End Time</string>
    <string name="txt_cashout">Cashout</string>
    <string name="btn_save">Save</string>
    <string name="txt_duration">Duration</string>
    <string name="txt_rate">Rate</string>
    <string name="txt_start">Start</string>
    <string name="txt_end">End</string>
    <string name="btn_addGame">add Game</string>
    <string name="btn_addLimit">add Limit</string>
    <string name="btn_addLocation">add Location</string>
    <string name="btn_addStake">add Stake</string>
    <string name="action_prefrences">Preferences</string>
    <string name="txt_currency">Currency</string>
    <string name="txt_Rate">Currency Rate</string>
    <string name="preferences" />
    <string name="edit_currencyRate">currency rate</string>
    <string name="entry_session">Session</string>
    <string name="btn_addCurrency">add Currency</string>
</resources>
