<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frame_session"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView8" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_gameType"
                android:id="@+id/txt_gameType"
                android:textStyle="bold"
                android:layout_margin="5dp"
                style="@style/Base.TextAppearance.AppCompat.Subhead" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_gameType"
                android:spinnerMode="dropdown"
                android:gravity="right"
                android:layout_margin="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_type"
                android:id="@+id/txt_type"
                android:layout_margin="5dp"
                android:textStyle="bold"
                style="@style/Base.TextAppearance.AppCompat.Subhead" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_limitType"
                android:spinnerMode="dropdown"
                android:layout_gravity="left"
                android:layout_margin="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_stakes"
                android:id="@+id/txt_stakes"
                android:textStyle="bold"
                android:layout_margin="5dp"
                style="@style/Base.TextAppearance.AppCompat.Subhead" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_stake"
                android:spinnerMode="dropdown"
                android:layout_margin="5dp"
                android:layout_gravity="right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_buyIn"
                android:id="@+id/txt_buyIn"
                android:textStyle="bold"
                android:layout_margin="5dp"
                style="@style/Base.TextAppearance.AppCompat.Subhead" />

            <EditText
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/edit_buyIn"
                android:layout_margin="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_bankroll"
                android:id="@+id/txt_bankroll"
                android:textStyle="bold"
                android:layout_margin="5dp"
                style="@style/Base.TextAppearance.AppCompat.Subhead" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_bankroll"
                android:spinnerMode="dropdown"
                android:entries="@array/bankroll"
                android:layout_margin="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_start"
                android:id="@+id/txt_start"
                android:textStyle="bold"
                android:layout_margin="5dp"
                style="@style/Base.TextAppearance.AppCompat.Subhead" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_startDate"
                    android:id="@+id/btn_startDate"
                    android:layout_weight="0.5"
                    android:onClick="onClick"
                    android:layout_margin="5dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_startTime"
                    android:id="@+id/btn_start"
                    android:onClick="onClick"
                    android:layout_weight="0.5"
                    android:layout_margin="5dp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_end"
                android:id="@+id/txt_end"
                android:textStyle="bold"
                android:layout_margin="5dp"
                style="@style/Base.TextAppearance.AppCompat.Subhead" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_endDate"
                    android:id="@+id/btn_endDate"
                    android:onClick="onClick"
                    android:layout_weight="0.5"
                    android:layout_margin="5dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_endTime"
                    android:id="@+id/btn_endTime"
                    android:onClick="onClick"
                    android:layout_weight="0.5"
                    android:layout_margin="5dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_cashout"
                    android:id="@+id/textView"
                    android:textStyle="bold"
                    android:layout_margin="5dp"
                    style="@style/Base.TextAppearance.AppCompat.Subhead" />

                <EditText
                    android:layout_width="109dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/edit_cashout"
                    android:layout_margin="5dp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_currency"
                android:id="@+id/txt_currency"
                android:textStyle="bold"
                style="@style/Base.TextAppearance.AppCompat.Subhead"
                android:layout_margin="5dp" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/spinner_currency"
                android:layout_weight="1"
                android:spinnerMode="dropdown"
                android:layout_margin="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_Rate"
                android:id="@+id/txt_rate"
                style="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textStyle="bold"
                android:layout_margin="5dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <Spinner
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner_currencyRate"
                    android:layout_margin="5dp"
                    android:spinnerMode="dropdown" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_currencyRate"
                    android:editable="true"
                    android:inputType="none|numberDecimal"
                    android:hint="@string/edit_currencyRate" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_location"
                android:id="@+id/txt_location"
                android:textStyle="bold"
                android:layout_margin="5dp"
                style="@style/Base.TextAppearance.AppCompat.Subhead" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_location"
                android:spinnerMode="dropdown"
                android:layout_margin="5dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_save"
                android:id="@+id/btn_save"
                android:layout_margin="5dp"
                android:onClick="saveSession"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>