<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/table_item">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/row_session">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/entry_session"
                android:textStyle="bold"/>

        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <TableRow android:id="@+id/row_startDate">
            <TextView
                android:text="@string/txt_date"
                android:padding="3dip"
                android:id="@+id/txt_startDate"
                android:layout_weight="0.5" />
            <TextView
                android:gravity="left"
                android:padding="3dip"
                android:id="@+id/entry_startDate"
                android:layout_weight="0.5" />
        </TableRow>

        <TableRow android:id="@+id/row_duration">
            <TextView
                android:text="End Date"
                android:padding="3dip"
                android:id="@+id/txt_endDate"
                android:layout_weight="0.5" />
            <TextView
                android:gravity="left"
                android:padding="3dip"
                android:id="@+id/entry_endDate"
                android:layout_weight="0.5" />
        </TableRow>

        <TableRow android:id="@+id/row_place">
            <TextView
                android:text="@string/txt_place"
                android:padding="3dip"
                android:id="@+id/txt_place"
                android:layout_weight="0.5" />
            <TextView
                android:gravity="left"
                android:padding="3dip"
                android:id="@+id/entry_place"
                android:layout_weight="0.5" />
        </TableRow>

        <TableRow android:id="@+id/row_stake">

            <TextView
                android:text="@string/txt_stake"
                android:padding="3dip"
                android:id="@+id/txt_Stake"
                android:layout_weight="0.5" />

            <TextView
                android:padding="3dip"
                android:id="@+id/entry_stake"
                android:gravity="left"
                android:layout_weight="0.5" />
        </TableRow>

        <TableRow android:id="@+id/row_gameType">

            <TextView
                android:text="@string/txt_gametype"
                android:padding="3dip"
                android:id="@+id/txt_gameType"
                android:layout_weight="0.5" />

            <TextView
                android:padding="3dip"
                android:id="@+id/entry_gameType"
                android:gravity="left"
                android:layout_weight="0.5" />
        </TableRow>

        <TableRow android:id="@+id/row_Cashout">
            <TextView
                android:text="@string/txt_cashout"
                android:padding="3dip"
                android:id="@+id/txt_cashout"
                android:layout_weight="0.5" />

            <TextView
                android:padding="3dip"
                android:id="@+id/entry_cashout"
                android:gravity="left"
                android:layout_weight="0.5" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_placeholder" />

        </TableRow>
    </TableLayout>

</LinearLayout>